// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System|TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-137l61-TextField"
      >
        <div
          className="css-1wi24bp-TextField"
        >
          <input
            className="css-87dceu-TextField"
            placeholder="Label"
            required={false}
          />
          <label
            className="css-1k70kah-Label"
          >
            Label
             
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System|TextField Text Field with Placeholder 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-1j69ls0-TextField"
      >
        <div
          className="css-1wi24bp-TextField"
        >
          <input
            className="css-n70vuy-TextField"
            placeholder="placeholder "
            required={false}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System|TextField Text Field with Placeholder and icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-1j69ls0-TextField"
      >
        <div
          className="css-1wi24bp-TextField"
        >
          <img
            height="16"
            src="https://brandmark.io/logo-rank/random/pepsi.png"
            width="16"
          />
          <input
            className="css-n70vuy-TextField"
            placeholder="placeholder "
            required={false}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System|TextField Text Field without Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-1j69ls0-TextField"
      >
        <div
          className="css-1wi24bp-TextField"
        >
          <input
            className="css-1rtt183-TextField"
            required={false}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System|TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-142x9m7-TextField"
      >
        <div
          className="css-1wi24bp-TextField"
        >
          <input
            className="css-87dceu-TextField"
            disabled={true}
            placeholder="Label"
            required={false}
          />
          <label
            className="css-1k70kah-Label"
          >
            Label
             
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System|TextField TextField with label and error 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-uwj166-TextField"
      >
        <div
          className="css-1wi24bp-TextField"
        >
          <input
            className="css-87dceu-TextField"
            placeholder="Label"
            required={false}
          />
          <label
            className="css-1k70kah-Label"
          >
            Label
             
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
